# jpki-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENCE.md  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
android/: Cargo.toml
android/src/: lib.rs
bridge/: Cargo.toml  libjpki.h
bridge/src/: lib.rs
cli/: Cargo.toml  README.md
cli/locales/: en.yml  ja.yml
cli/src/: digest.rs  main.rs  nfc.rs
core/: Cargo.toml
core/src/: card.rs  der.rs  jpki.rs  lib.rs  nfc.rs  pcsc.rs
core/src/ap/: crypto.rs  jpki.rs  mod.rs  support.rs  surface.rs
examples/ffi-generic-cpp/: CMakeLists.txt  jpki.h  main.cpp
ffi/android/: Cargo.toml
ffi/android/src/: lib.rs
ffi/dotnet/: .gitignore  Card.cs  Cargo.toml  INfcCard.cs  Jpki.cs  NfcCard.cs  build.rs  dotnet.csproj
ffi/dotnet/Ap/: CryptoAp.cs
ffi/dotnet/Native/: NativeMethods.cs
ffi/generic/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
ffi/generic/src/: lib.rs
src/: der.rs  lib.rs  nfc.rs  pkcs.rs
src/jpki/: ap.rs  card.rs
src/jpki/ap/: jpki.rs  surface.rs
src/nfc/: apdu.rs  card.rs
src/nfc/apdu/: command.rs  handler.rs  ins.rs  response.rs
src/pkcs/: attribute.rs  finder.rs  mechanism.rs  object.rs  session.rs  slot.rs
