[package]
name = "jpki"
description = "A crate to communicate with JPKI card through an APDU delegate."
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/siketyan/jpki-rs"
repository = "https://github.com/siketyan/jpki-rs.git"
authors = ["Naoki Ikeguchi <me@s6n.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.0-alpha.10"
yasna = "0.4"
x509-certificate = "0.4"

[workspace]
members = [
    "android"
]
