[package]
name = "jpki-android"
version = "0.1.0"
authors = ["Naoki Ikeguchi <me@s6n.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jpki"
crate-type = ["cdylib"]

[dependencies]
android_log = "0.1.3"
log = "0.4.14"
jni = "0.19.0"
jpki = { path = ".." }
thiserror = "1.0"
