[package]
name = "jpki-android"
description = "Read certificates, sign and verify documents using your JPKI card."
version = "0.2.1"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/siketyan/jpki-rs"
repository = "https://github.com/siketyan/jpki-rs.git"
authors = ["Naoki Ikeguchi <me@s6n.jp>"]
readme = "../README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jpki"
crate-type = ["cdylib"]

[dependencies]
android_log = "0.1.3"
log = "0.4.14"
jni = "0.19.0"
jpki = { version = "0.2", path = "..", features = ["digest"] }
thiserror = "1.0"
