[package]
name = "jpki-cli"
description = "Read certificates, sign and verify documents using your JPKI card."
version = "0.2.2"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/siketyan/jpki-rs"
repository = "https://github.com/siketyan/jpki-rs.git"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feed free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu = "0.2"
clap = { version = "3.1", features = ["derive"] }
dialoguer = "0.10"
hex = "0.4"
jpki = { version = "=0.2.2", path = "../core", features = ["digest", "serde"] }
pcsc = "2.7"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
