[package]
name = "jpki-cli"
description = "Read certificates, sign and verify documents using your JPKI card."
version = "0.4.3"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/siketyan/jpki-rs"
repository = "https://github.com/siketyan/jpki-rs.git"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feel free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]
readme = "README.md"
edition = "2021"

[package.metadata.i18n]
available-locales = ["en", "ja"]
default-locale = "en"

[dependencies]
apdu = "0.4.0"
clap = { version = "4.0", features = ["derive"] }
der = { version = "0.7.1", features = ["alloc", "derive", "oid"] }
dialoguer = "0.10"
hex = "0.4"
jpki = { version = "=0.4.3", path = "../core", features = ["pcsc", "serde"] }
once_cell = "1.15"
pcsc = "2.7"
ring = "0.16.20"
rust-i18n = "1.1.1"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-certificate = "0.18.0"
