[package]
name = "jpki-ffi-android"
description = "Read certificates, sign and verify documents using your JPKI card."
version = "0.4.0"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/siketyan/jpki-rs"
repository = "https://github.com/siketyan/jpki-rs.git"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feed free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]
readme = "../../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jpki"
crate-type = ["cdylib"]

[dependencies]
android_log = "0.1.3"
log = "0.4.14"
jni = "0.19.0"
jpki = { version = "=0.4.0", path = "../../core" }
thiserror = "1.0"
