[package]
name = "jpki-ffi-generic"
description = "Generic FFI binding of jpki-rs for C/C++ and many other languages."
version = "0.4.2"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/siketyan/jpki-rs"
repository = "https://github.com/siketyan/jpki-rs.git"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feel free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]
readme = "../../README.md"
edition = "2021"
include = ["src", "bindings.h"]

[lib]
name = "jpki"
crate-type = ["cdylib"]

[dependencies]
jpki = { version = "=0.4.2", path = "../../core" }

[build-dependencies]
cbindgen = "0.24"
